# ib.py

./: .gitignore  README.md  bot.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ruff.yml
cogs/: channelorder.py  dev.py  embeds.py  filter.py  help.py  helper.py  helpermessage.py  moderation.py  monitor.py  public.py  reminder.py  roles.py  tags.py  updates.py  voting.py
db/: cached.py  db.py  models.py
utils/: checks.py  commands.py  config.py  converters.py  misc.py  pagination.py  time.py
